alignment, alert fixed

--- a/admin/css/alert.css
+++ b/admin/css/alert.css
@@ -21,104 +21,85 @@ body {
   color: #000000;
 }
 .container {
-  height: 20.5rem;
+  height: 20rem;
   width: 100%;
 }
 form {
   font-weight: bold;
   background: #d9d9d9;
-  font-size: 22px;
+
   width: 100%;
-  margin: 5rem auto 0 auto;
+  margin: 4rem auto 0 auto;
   padding: 50px;
 }
 .form-group {
   display: grid;
   grid-template-columns: 100px 50fr;
   align-items: center;
-  margin-bottom: 0px;
   text-align: center;
+  width: 75%;
+  padding-left: 60px;
 }
 .form-group label {
-  margin-top: 5px;
-  margin-bottom: 5px;
+  text-align: left;
+  font-size: 22px;
 }
 .form-group textarea-label {
   text-align: left;
-  display: block;
-  padding-left: 15px;
+  font-size: 22px;
 }
-form input {
-  width: 75%;
-  height: 15px;
-  margin: 10px;
-  margin-left: 25px;
-  font-size: 18px;
-}
-
-.input-group label {
-  display: block;
-  padding-left: 15px;
-  text-align: left;
-  font-size: 8px;
-}
-
-.input-group input {
-  width: 13px;
-  height: 8px;
-  padding: 0;
-  margin: 0;
-  vertical-align: bottom;
-  position: relative;
-  top: -3px;
-  *overflow: hidden;
-  text-align: center;
-  font-weight: 100;
-  color: #464646;
+input[type="text"],
+input[type="number"],
+select {
+  width: 100%;
+  box-sizing: border-box;
+  background: rgb(255, 255, 255);
+  border: none;
+  font-size: 15px;
+  align-items: center;
+  display: flex;
+  margin: 6px 2px;
+  padding: 8px 5px;
+  border-radius: 6px;
 }
 
 .form-group select {
   display: grid;
-  grid-template-columns: 100px 40fr;
-  height: 1.7rem;
-  width: 75%;
+  grid-template-columns: 100px 50fr;
+
   border: none;
   outline: none;
   font-weight: 100;
   text-align: left;
-  padding: 0;
+  padding: 0px 0px 0px 10px;
   margin: 0;
-  margin-left: 55px;
-  padding-left: 10px;
   color: #706c6c;
-}
 
+  align-items: center;
+}
 .submit {
-  float: none;
   background-color: red;
   color: white;
-  width: 200px;
-  height: 35px;
+  width: 15%;
+  height: 40px;
   font-size: 20px;
   cursor: pointer;
   border: none;
-  border-radius: 10px;
+  border-radius: 8px;
   font-weight: bold;
-  margin-top: 50px;
-  top: 500px;
+  top: 70%;
   left: 40%;
   position: absolute;
   text-align: center;
-  display: inline;
   padding: 5px;
 }
 .submit:hover {
   background-color: rgb(207, 98, 98);
 }
-
 @media only screen and (max-width: 2560px) {
   .container {
-    height: 20rem;
+    height: 100%;
+    width: 100%;
   }
   form {
     width: 100%;
@@ -130,163 +111,37 @@ form input {
     margin-left: 25px;
     font-size: 18px;
   }
+
   .form-group select {
-    width: 75%;
-    margin: 23px;
-    height: 28px;
-    font-size: 18px;
-  }
-  .submit {
-    margin-top: 80px;
-    width: 15%;
-    cursor: pointer;
-    left: 40%;
-    text-align: center;
+    height: 30px;
   }
 }
 
-@media only screen and (max-width: 1440px) {
-  .container {
-    height: 20rem;
-  }
-  form {
-    width: 100%;
-  }
-  form input {
-    width: 75%;
-    height: 15px;
-    margin: 10px;
-    margin-left: 25px;
-    font-size: 18px;
-  }
-  .form-group select {
-    width: 75%;
-    margin: 23px;
-    height: 28px;
-    font-size: 18px;
-  }
-
-  .submit {
-    margin-top: 60px;
-    width: 15%;
-    cursor: pointer;
-    left: 40%;
-    text-align: center;
+@media only screen and (min-width: 992px) {
+  input[type="text"],
+  input[type="number"],
+  select {
+    border-radius: 15px;
+    padding: 15px;
+    margin: 15px 70px 15px 35px;
+    font-weight: 200;
   }
 }
-
-@media only screen and (max-width: 1024px) {
-  .container {
-    height: 20rem;
-  }
-  form {
-    width: 100%;
-  }
-  form input {
-    width: 75%;
-    height: 15px;
-    margin: 10px;
-    margin-left: 25px;
-    font-size: 18px;
-  }
-  .form-group select {
-    width: 75%;
-    margin: 23px;
-    height: 28px;
-    font-size: 18px;
-  }
-  .submit {
-    margin-top: 60px;
-    width: 15%;
-    cursor: pointer;
-    left: 40%;
-    text-align: center;
-  }
+@media only screen and (min-width: 400px) {
 }
-
-@media only screen and (max-width: 768px) {
-  .container {
-    height: 20rem;
-  }
-  form {
-    width: 100%;
-  }
-  form input {
-    width: 75%;
-    height: 15px;
-    margin: 10px;
-    margin-left: 25px;
-    font-size: 18px;
-  }
-  .form-group select {
-    width: 75%;
-    margin: 23px;
-    height: 28px;
-    font-size: 18px;
-  }
-  .submit {
-    margin-top: 60px;
-    width: 15%;
-    cursor: pointer;
-    left: 40%;
-    text-align: center;
-  }
+.form-group select {
+  margin-left: 0px;
+  height: 16px;
+  padding: 0px;
 }
-
-@media only screen and (max-width: 660px) {
-  .container {
-    height: 20rem;
-  }
-  form {
-    width: 100%;
-  }
-  form input {
-    width: 75%;
-    height: 15px;
-    margin: 10px;
-    margin-left: 25px;
+@media only screen and (min-width: 650px) {
+  input[type="text"],
+  input[type="number"],
+  select {
     font-size: 18px;
-  }
-  .form-group select {
-    width: 75%;
-    margin: 23px;
     height: 28px;
-    font-size: 18px;
   }
   .submit {
-    margin-top: 60px;
-    width: 15%;
-    cursor: pointer;
-    left: 40%;
-    text-align: center;
-  }
-}
-
-@media only screen and (max-width: 425px) {
-  .container {
-    height: 20rem;
-  }
-  form {
-    width: 100%;
-  }
-  form input {
-    width: 75%;
-    height: 15px;
-    margin: 10px;
-    margin-left: 25px;
-    font-size: 18px;
-  }
-  .form-group select {
-    width: 75%;
-    margin: 23px;
-    height: 28px;
-    font-size: 18px;
-  }
-  .submit {
-    margin-top: 60px;
-    width: 15%;
-    cursor: pointer;
-    left: 40%;
-    text-align: center;
+    top: 550px;
   }
 }
